# docs/swagger.yaml
@@ -131,6 +131,23 @@ info:
   title: Banking API
   version: "1.0"
 paths:
+  /account/:
+    get:
+      description: Get account detail
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/account.AccountResponse'
+            type: array
+      security:
+      - Bearer: []
+      summary: Get account detail
+      tags:
+      - accounts
   /accounts/:
     get:
       consumes:
@@ -171,29 +188,6 @@ paths:
       security:
       - Bearer: []
       summary: Create a new account
-      tags:
-      - accounts
-  /accounts/{id}:
-    get:
-      description: Get account by ID
-      parameters:
-      - description: Account ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/account.AccountResponse'
-            type: array
-      security:
-      - Bearer: []
-      summary: Get account by ID
       tags:
       - accounts
   /accounts/transfer/:
